--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -419,8 +419,9 @@ const stats = [
           >
             <PriceCardsData client:load />
           </div>
-
-          <Button text="Discover more" />
+          <a href="/pricing">
+            <Button text="Discover more" />
+          </a>
         </div>
       </div>
     </section>
