--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -87,8 +87,9 @@ import EvaluatePriceTabs from "../components/react/EvaluatePriceTabs";
             campaigns.</span
           >
         </div>
-
-        <Button text="Try 1 Complimentary Report" className="w-[345px]" />
+        <a href="https://app.ionkol.com/sign-up">
+          <Button text="Try 1 Complimentary Report" className="w-[345px]" />
+        </a>
       </div>
     </section>
 
@@ -107,8 +108,9 @@ import EvaluatePriceTabs from "../components/react/EvaluatePriceTabs";
           >
             <PriceCardsData client:load />
           </div>
-
-          <Button text="Start Now" />
+          <a href="https://app.ionkol.com/sign-up">
+            <Button text="Discover More" />
+          </a>
         </div>
       </div>
     </section>
