--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -86,11 +86,13 @@ const data = {
   <p class="font-normal tracking-wide mb-14 text-[42px]">
     {data.description}
   </p>
-  <button
-    class="h-10 px-10 py-2 bg-[#EE7380] rounded-3xl text-white text-base font-medium leading-normal tracking-wide hover:bg-[#1a1a2e] active:bg-[#33334d] transition-colors duration-300"
-  >
-    {data.buttonLabel}
-  </button>
+  <a href="https://app.ionkol.com/en/sign-up">
+    <button
+      class="h-10 px-10 py-2 bg-[#EE7380] rounded-3xl text-white text-base font-medium leading-normal tracking-wide hover:bg-[#1a1a2e] active:bg-[#33334d] transition-colors duration-300"
+    >
+      {data.buttonLabel}
+    </button>
+  </a>
 </div>
 
 <script>
